commit three pages
three pages,including user login module.but without book information
http request

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -13,6 +13,12 @@
 
 @import "../pages/home/home";
 
+@import "../pages/contact/usercenter";
+
 .textAlignRight{
 	text-aligh:right;
+}
+
+.Aligncenter{
+	text-align:center;
 }
